<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Ciudades"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/texto_bienvenida"
        android:textColor="@color/black"
        android:layout_margin="16dp"
        />

    <Button
        android:id="@+id/btnMexico"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:text="@string/texto_boton_Mexico" />

    <Button
        android:id="@+id/btnParis"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:text="@string/texto_boton_paris" />

    <Button
        android:id="@+id/btnShanghai"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:text="@string/texto_boton_shanghai"/>

    <Button
        android:id="@+id/btnSabinas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:text="@string/texto_boton_sabinas"/>

</LinearLayout>